fix: correção de paginação de veículos